--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -117,7 +117,8 @@
 		<a href="https://repth.neocities.org/theme" target="_blank">REPTH</a> /
 		<a href="https://teppyslayouts.neocities.org" target="_blank">teppy</a> /
 		<a href="https://cinni.net/?z=/theme/layouts" target="_blank">cinni</a> /
-		<a title="can't really get the code for these (as far as im aware) but you can take a look for inspiration!" href="https://web.archive.org/web/20030602114102/http://celestial.zanarkand.org/layouts.shtml" target="_blank">celestial.zanarkand</a>
+		<a title="can't really get the code for these (as far as im aware) but you can take a look for inspiration!" href="https://web.archive.org/web/20030602114102/http://celestial.zanarkand.org/layouts.shtml" target="_blank">celestial.zanarkand</a> / 
+		<a href="https://nenrikido.neocities.org/code/" target="_blank">nenrikido</a>
 
 		<h3 id="sites">useful sites</h3>
 		<li><a href="https://ready.mobi" target="_blank">ready.mobi</a> - preview your site on a mobile sized iframe! great to check for optimization for mobile browsers</li>
