moved hourlysiinamota info to another site

--- a/website/projects/index.html
+++ b/website/projects/index.html
@@ -24,7 +24,7 @@
 			<p>(　o=^•ェ•)o　┏━┓ here's some of my stuff that is one the interwebs</p>
 			<ul>
 				<li><a href="/">doqmeat.com</a> - my personal website! you are on it right now!</li>
-				<li><a href="/projects/hourlysiinamota">hourlysiinamota</a> - a twitter song bot with songs from composer and vocaloid producer <i>siinamota</i></li>
+				<li><a href="https://siinamota.doqmeat.com/bot">hourlysiinamota</a> - a twitter song bot with songs from composer and vocaloid producer <i>siinamota</i></li>
 				<ul>
 					<li><a title="hosted on notion... i do have plans on making a site just for this" href="https://sepiarecord.notion.site/siinamota-guide-5eacdb8abedf4da0a557b0a74126d073?pvs=4" target="_blank">siinamota guide</a> - a guide i've made for knowing more about siinamota's music. i also share my siinamota album scans there.</li>
 				</ul>
