added deploy to neocities tutorial link

--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -81,7 +81,7 @@
 		<li><a href="https://notepad-plus-plus.org/" target="_blank">notepad++</a> - offline editor, like notepad but with more stuff!</li>
 		<li><a href="https://brackets.io/" target="_blank">brackets</a> - offline editor, centered around coding HTML, has <a href="https://registry.brackets.io/" target="_blank">extensions</a> support! has an <a href="https://phcode.dev/" target="_blank">online version</a> as well. <small>this is the one i use!</small></li>
 		<li><a href="https://code.visualstudio.com/" target="_blank">visual studio code</a> - offline editor, supported by microsoft, it has a TON of extensions and other options in comparison to brackets.</li>
-		<li><a href="https://desktop.github.com/" target="_blank">github desktop</a> - program used to update my website's code directly from my PC without having to open neocities built-in coder using <a href="https://deploy-to-neocities.neocities.org/" target="_blank">deploy-to-neocities</a>. this is such a time-saver and i really recommend it to everyone who updates their site a lot.</li>
+		<li><a href="https://deploy-to-neocities.neocities.org/" target="_blank">deploy-to-neocities</a> - what i use to update my website's code directly from my PC without having to open neocities built-in coder. this is such a time-saver and i really recommend it to everyone who updates their site a lot! here's a <a href="https://github.com/burned-salmon/deploy-to-neocities-template">tutorial</a> by MissMoss that i followed to set it up!</li>
 
 		<h3 id="hosting">hosting</h3>
 		<li><a href="https://neocities.org/" target="_blank">neocities</a> - where my site is currently hosted on :3 1gb of space on a free acc</li>
@@ -117,7 +117,7 @@
 		<a href="https://repth.neocities.org/theme" target="_blank">REPTH</a> /
 		<a href="https://teppyslayouts.neocities.org" target="_blank">teppy</a> /
 		<a href="https://cinni.net/?z=/theme/layouts" target="_blank">cinni</a> /
-		<a title="can't really get the code for these (as far as im aware) but you can take a look for inspiration!" href="https://web.archive.org/web/20030602114102/http://celestial.zanarkand.org/layouts.shtml" target="_blank">celestial.zanarkand</a> / 
+		<a title="can't really get the code for these (as far as im aware) but you can take a look for inspiration!" href="https://web.archive.org/web/20030602114102/http://celestial.zanarkand.org/layouts.shtml" target="_blank">celestial.zanarkand</a> /
 		<a href="https://nenrikido.neocities.org/code/" target="_blank">nenrikido</a>
 
 		<h3 id="sites">useful sites</h3>
