--- a/website/collection/cats/index.html
+++ b/website/collection/cats/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>cat hoarding</title>
+	<title>cat collection</title>
 	<link rel="icon" type="image/x-icon" href="/!g/pix/dumy.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="cat.css" rel="stylesheet" type="text/css" media="all">
@@ -16,8 +16,8 @@
 
 <body>
 	<header>
-		<h1>cat hoarding</h1>
-		<p>this is exactly what it sounds like. i love saving these little fellas on my computer. <small>currently in the process of linking to their sources and adding alt text to the imgs!</small> <img src="p-sakuraw.gif" alt=""> </p>
+		<h1>my awesome cat collection (^・ω・^ )</h1>
+		<p>i love saving these little fellas on my puter.<br><small>currently in the process of linking to their sources and adding alt text to the imgs!</small> <img src="p-sakuraw.gif" alt=""> </p>
 	</header>
 
 	<div id="gallery">
@@ -26,7 +26,7 @@
 		<div class="column">
 			<img src="!g/stupid-tiger.jpg" alt="stupid tiger">
 			<img src="!g/baby-cat.jpeg" alt="cat with a bib">
-			<img src="!g/ballin.jpeg">
+			<img src="!g/ballin.jpeg" alt="cat balling">
 			<img src="!g/bigoleyes.jpeg">
 			<img src="!g/bleh.jpeg">
 			<img src="!g/cryingcat.jpg">
@@ -48,6 +48,7 @@
 
 		<!--column 2-->
 		<div class="column">
+			<img src="!g/mau.jpg" alt="the tower of babel if it was awesome">
 			<img src="!g/buenosdias.jpeg" alt="buenos dias">
 			<img src="!g/cat-angel.gif">
 			<img src="!g/freddy-jumpscare.gif" alt="mr shock and freddy">
