minor tweaks to journal

--- a/website/journal/index.html
+++ b/website/journal/index.html
@@ -41,8 +41,7 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 				<p>i don't want to treat this journal as a vent dump, or be overly negative. but i do be having bad times. anything of those topics will have <mark>content warnings</mark> at the start of the entry.</p>
 			</details>
 			<p><a href="credit.html" target="iframe_a">credit</a> / <a title="hosted on FC2, but will pop up in the iframe :)" href="https://doqmeat.blog.fc2.com" target="iframe_a">microblog</a></p>
-			<img src="/!g/deco/pencil1.gif" width="40%">
-
+			<img class="hide" src="/!g/deco/pencil1.gif" style="max-width:100%">
 			<details open>
 				<summary>2024</summary>
 				<a href="2024/03.html" target="iframe_a">march</a>
