fixed a broken img on fav albums

--- a/website/music/fav-albums.html
+++ b/website/music/fav-albums.html
@@ -278,7 +278,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 
 					<p>third of all: yeah i have my favorites but all of the songs are simply just so so so lovely. <i>in my head</i> opens with a very nice guitar and miku's tuning also feels so gentle <img src="/!g/pix/catupndown.gif"></p>
 					<p>and i havent even started talking about the <b>art</b> of this album!!!!! the artwork featured in the album cover and booklet is by japanese artist <a title="pixiv profile" href="https://www.pixiv.net/en/users/849346" target="_blank">momoc</a>!</p>
-					<p><img src="/" width="100%" alt="full img of the kokegane no uta album cover"></p>
+					<p><img src="https://siinamota.doqmeat.com/pics/other/kokegane-no-uta-momoc-pixiv.jpg" width="100%" alt="full img of the kokegane no uta album cover"></p>
 					<p>and let me tell you: this might be my favorite album cover. its so colorful and pretty. and i think it encapsulates well the vibes of this EP. thanks to this album cover, i got to know more about momoc's other work as well, and i just love their art style so much!!! i'll make a page someday on my site showcasing my fav works from them.</p>
 					<p>here are some pages from the <a title="archive.org page" href="https://archive.org/details/kokegane-no-uta-scans" target="_blank">booklet</a> (scans provided to me! i hope to own the CD someday) with more illustrations by momoc</p>
 					<p><img src="/shrines/siinamota/kokagane-no-uta/img5.jpg" width="100%"></p>
