space theme is now... decent
made for slow connections (me) in mind

--- a/website/home.html
+++ b/website/home.html
@@ -47,7 +47,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		<div id="theme-picker" class="box">
 			<h2>pick a theme!</h2>
 			<button onclick="toggleTheme('/!f/homepage-v3/flower.css')">flower</button>
-			<button title="currently a WIP!" onclick="toggleTheme('/!f/homepage-v3/space.css')">space</button>
+			<button onclick="toggleTheme('/!f/homepage-v3/space.css')">space</button>
 		</div>
 
 		<nav id="nav" class="box">
@@ -87,7 +87,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		</nav>
 
 		<div id="intro" class="box">
-			<img src="/!g/deco/kitty-text.gif" align="left" style="max-width:100%" alt="">
+			<img class="intro-img" align="left" style="max-width:100%" alt="">
 			<p>hello! my name is <b class="me">des</b> and this is my humble little corner on the internet. it mostly serves as a digital journal where i share whatever i want, however i want it! coding this site has been the most fun i've had online in a long time. so thank you for checking it out! i hope you find something you like.</p>
 
 			<p>here's my <a class="outlink" href="https://doqmeat.123guestbook.com/">guestbook</a> if you'd like to write a little message <img src="!g/pix/cat-heart.gif"> every single message means a ton to me!</p>
@@ -101,7 +101,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h4>notes:</h4>
 			<li>recommended to view on a 1536px+ wide screen <i>but</i> most pages are responsive to your screen size :)</li>
 			<li>some pages use <b>javascript</b> <small>(some pages might not work correctly without it)</small> and <b>iframes</b></li>
-			<li><b>not tested or recommended to view on mobile devices</b> though it should be viewable at the very least</li>
+			<li>most pages should be <b>mobile compatible</b> though it might look VERY weird.</li>
 		</div>
 
 		<div id="status" class="box;">
@@ -180,7 +180,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="https://allyratworld.com/cafe/rose" target="_blank"><img src="/!g/web/fanlisting-cliques/88x31kuromi.png" alt="cafe rose banner"></a>
 
 			<br>
-			<a href="https://mizuki.world/nso/" target="_blank"><img src="/!g/web/fanlisting-cliques/nso.png" alt="needy streamer overdose fanlisting"></a>
+			<a href="https://mizuki.world/nso/" target="_blank"><img src="/!g/web/fanlisting-cliques/nso.png" alt="needy streamer overdose fanlisting" style="max-width:100%"></a>
 
 			<br>
 			<a href="https://dust.kuchiki.net/" target="_blank"><img src="/!g/web/fanlisting-cliques/cats.gif"></a>
@@ -326,7 +326,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 	<div class="snowflakes">
 		<div class="snowflake"><img src="/!g/pix/sorahana-butterfly-p2.gif"></div>
-		<div class="snowflake"><img src="/!g/pix/sparkles1.gif"></div>
+		<div class="snowflake"></div>
 		<div class="snowflake"><img src="/!g/pix/butter2.gif"></div>
 		<div class="snowflake"><img src="/!g/pix/nyancat.gif"></div>
 		<div class="snowflake"><img src="/!g/pix/sparkles1.gif"></div>
@@ -371,7 +371,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 	</script>
 	<script src="!f/homepage-v3/last.fm.js">
 	</script>
-	<script src="/!f/css-picker.js"></script>
+	<script src="!f/css-picker.js"></script>
 	<script src="!f/music-toggle.js"></script>
 	<script src="!f/homepage-v3/mccatdrag.js"></script>
 </body>
