--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -139,7 +139,7 @@
 		<li><a href="https://codepen.io/stephenpaton-tech/full/JjRvGmY" target="_blank">custom scrollbar maker</a></li>
 		<li><a href="https://csscompressor.com/" target="_blank">CSS compressor</a> - compresses file sizes!</li>
 		<li><a href="https://javascript-compressor.com/" target="_blank">JS compressor</a> - compresses file sizes!</li>
-		<li><a href="https://tools.pingdom.com/" target="_blank">website speed tester</a> - tells you how fast does your website load! very neat bc it also tells you which file types are taking most of the space in the page</li>
+		<li><a href="https://tools.pingdom.com/" target="_blank">website speed tester</a> - tells you how fast does your website loads! very neat bc it also tells you which file types are taking most of the space in the page</li>
 
 		<h3 id="tut">tutorials / guides</h3>
 		<li><a href="https://github.com/burned-salmon/deploy-to-neocities-template" target="_blank">deploy to neocites</a> from github! - easy to follow template by missmoss. more info can be found on <a href="https://deploy-to-neocities.neocities.org/" target="_blank">deploy-to-neocities.neocities.org</a></li>
@@ -149,7 +149,7 @@
 		<li><a href="https://solaria.neocities.org/accessibility">solaria's accessibility article</a></li>
 		<li><a href="https://solaria.neocities.org/gifpausetut">solaria's pause gif without JS </a></li>
 		<li><a href="https://www.geeksforgeeks.org/how-to-switch-between-multiple-css-stylesheets-using-javascript/" target="_blank">how to switch between different stylesheets</a></li>
-		<li><a href="https://www.freecodecamp.org/news/what-is-rem-in-css-rem-unit-font-size-padding-height-and-more/" target="_blank">what is REM in CSS?</a> - an article explaining to this size works</li>
+		<li><a href="https://www.freecodecamp.org/news/what-is-rem-in-css-rem-unit-font-size-padding-height-and-more/" target="_blank">what is REM in CSS?</a> - an article explaining how this size works</li>
 
 
 		<h3 id="cool">cool stuff to put on site</h3>
