--- a/website/music/kpop-producers.html
+++ b/website/music/kpop-producers.html
@@ -31,6 +31,10 @@
 			padding: 10px;
 		}
 
+		li {
+			margin: 10px 0;
+		}
+
 	</style>
 </head>
 
@@ -39,7 +43,9 @@
 	<div id="frame">
 
 		<h1>fav kpop producers</h1>
-		<p><small>currently a work in progress!</small></p>
+		<p><small>
+				<center>currently a work in progress!</center>
+			</small></p>
 		<p>i feel like these people often get overlooked by the kpop community a lot when they are the ones that bring kpop music to life. one day i was bored as hell and decided to compile a list of producers who's style i like and my favorite songs from them <img src="/!g/pix/cat-music.gif"></p>
 
 		<!--  <p class="key">key: artist, <a class="song" href="/">song</a>, <b>highlighted producers</b></p>-->
