minor update to about

--- a/website/about/index.html
+++ b/website/about/index.html
@@ -34,9 +34,11 @@
 		<div class="header">webmaster_&amp;_site_info.txt<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
-				<p><img title="this is me btw" src="/!g/deco/silly-cat.gif" align="left" style="margin-right:5px;" width="25%">hello everyone! i go by <mark>des</mark> and i am <mark>the webmaster of this site!</mark> i'm 23 year olds from a small island called puerto rico. i've lived here pretty much my entire life. gender is something i don't really care much about these days but i am nonbinary and go by any pronouns.</p>
+				<p><img title="this is me btw" src="/!g/deco/silly-cat.gif" align="left" style="margin-right:5px;" width="25%">hello everyone! i go by <mark>des</mark> and i am <mark>the webmaster of this site!</mark> i'm 23 year olds from a small island called puerto rico. i've lived here pretty much my entire life. gender is something i don't really care much about these days but i am nonbinary and go by any pronouns. i'm currently studying computer science at university（*＾-＾*）</p>
 
 				<p><a title="art by bitmapdreams" href="http://lastsecret.net/bitmapdreams/" target="_blank"><img src="/!g/deco/springflowers.gif" width="20%" align="right"></a>i find it extremely difficult to write about who i am. i'm not sure why. i would say i know myself pretty well. but when comes to things like this, i am pretty horrible at it. hopefully you can get an idea of who i am by exploring my site, which i pour a lot of myself and love into <img src="/!g/pix/catroll.gif"></p>
+
+
 
 				<p>one day i stumbled upon <a href="https://hunipyon.neocities.org/" target="_blank">hunipyon</a>'s site and i just fell in love with the concept of having my very own site i can customize however the hell i want and put whatever i want in it. the possibilities are truly endless!</p>
 
@@ -46,9 +48,7 @@
 
 				<p><a title="art by blackrabbit-25" href="https://www.deviantart.com/blackrabbit-25" target="_blank"><img src="/!g/deco/blackrabbit25-book.gif" align="right" style="margin-top:-25px;"></a>so think of my website as a digital journal. i will share bits and pieces of my personal life, interests, passions, and even creations. <mark>my goal is simply to have a place on the internet where i can freely be myself without the chaos and limitations of social media. and to have fun</mark>, of course :3 i wouldn't be doing any of this if it wasn't fun for me.</p>
 
-				<p>my love for this site has inspired me to pursue college education again, and i'm currently studying computer science <img src="/!g/pix/emote1m.gif" alt=""></p>
-
-				<p><img src="/!g/deco/mail.gif" align="left" style="margin-right:15px;">with all that said, i am pretty friendly and love to interact with other people. feel free to e-mail me at <a href="mailto:doqmeat@gmail.com" target="_blank">doqmeat@gmail.com</a> about whatever, really! whether it be to tell me about what you thought about my site, to send me pictures of your cats, recommend me an album you think i might like, or even ask any coding related questions you might have. i might take a bit to answer back but anything goes, thank you very much for reading!</p>
+				<p><img src="/!g/deco/mail.gif" align="left" style="margin-right:15px;">with all that said, i am pretty friendly and love to interact with other people. feel free to e-mail me at <a href="mailto:doqmeat@gmail.com" target="_blank">doqmeat@gmail.com</a> about whatever, really! whether it be to tell me about what you thought about my site, to send me pictures of your cats, recommend me an album you think i might like, or even ask any coding / website related questions you might have. i might take a bit to answer back but anything goes, thank you very much for reading! and i hope you enjoy your stay.</p>
 
 				<p style="text-align: right"><b>last updated on: 07.mar.24</b></p>
 			</div>
