minor fixes in about

--- a/website/about/index.html
+++ b/website/about/index.html
@@ -29,6 +29,15 @@
 		</div>
 	</div>
 
+	<div class="secret draggable">
+		<div class="header">secret.zip<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+		<div class="borderwrap">
+			<div class="wrapper-in padding">
+				<img src="/collection/cats/!g/YOUVEBEENJESTERED.jpg" width="100%">
+			</div>
+		</div>
+	</div>
+
 	<!-- 	about me -->
 	<div class="about draggable">
 		<div class="header">webmaster_&amp;_site_info.txt<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
@@ -89,9 +98,9 @@
 			<div class="wrapper-in padding list">
 				<h3>general</h3>
 				<li>petting cats</li>
-				<li>making lists / journaling</li>
-				<li>photography</li>
-				<li>art</li>
+				<li>sweets</li>
+				<li>making lists</li>
+				<li>visual arts</li>
 				<li>horror</li>
 				<li>driving at night (with no traffic)</li>
 				<li>coding HTML and CSS</li>
@@ -123,6 +132,7 @@
 				<li>the little prince</li>
 				<li>joe pera talks with you</li>
 				<li>bee and puppycat</li>
+				<li>clarence</li>
 
 				<h3>animals</h3>
 				<li>cats! :3</li>
@@ -143,7 +153,7 @@
 				<li>the puertorican government</li>
 				<li>most old ppl here too</li>
 				<li>nfts, AI shit, whatever cryptobros are up to</li>
-				<li>coding JavaScript</li>
+				<li>coding JavaScript <small>i am slowly learning though....</small></li>
 			</div>
 		</div>
 	</div>
@@ -276,25 +286,15 @@
 		<div class="header">links.txt<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding list">
-				<img src="/!g/pix/buttermeadow.gif" style="position:absolute;bottom:20px;right:20px;pointer-events:none;width:55px;" class="mobile">
 				you can find me in other places like...
 				<a title="e-mail" href="mailto:doqmeat@gmail.com"><img src="/!g/pix/mail11a.gif" align="left" style="margin-right:15px;margin-top:5px;margin-left:10px;"></a>
-				<li><a href="https://github.com/doqmeat" target="_blank">github</a> / <a href="https://doqmeat.github.io" target="_blank">projects website</a></li>
-				<li><a href="https://codepen.io/doqmeat" target="_blank">codepen</a></li>
-				<li><a href="https://doqmeat.blog.fc2.com/" target="_blank">FC2 blog</a></li>
+				<li><a href="https://github.com/doqmeat" target="_blank">github</a>
 				<li><a href="https://rateyourmusic.com/~doqmeat" target="_blank">RYM</a></li>
 				<li><a href="https://letterboxd.com/Iakitu/" target="_blank">letterboxd</a></li>
 				<li><a href="https://www.last.fm/user/lakiitu" target="_blank">last.fm</a></li>
 				<li><a href="https://ko-fi.com/doqmeat" target="_blank">ko-fi</a></li>
-			</div>
-		</div>
-	</div>
-
-	<div class="secret draggable">
-		<div class="header">secret.zip<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
-		<div class="borderwrap">
-			<div class="wrapper-in padding">
-				<img src="/collection/cats/!g/YOUVEBEENJESTERED.jpg" width="100%">
+				<li><a title="here til the site gets inevitably nuked" href="https:/twitter.com/sepiarecord999" target="_blank">twitter</a></li>
+				<li><a href="https://bsky.app/profile/doqmeat.com" target="_blank">bluesky</a></li>
 			</div>
 		</div>
 	</div>
