button wall update

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -236,7 +236,7 @@
 			<a href="https://renkotsuban.neocities.org" target="_blank"><img src="http://renkotsuban.neocities.org/button.gif"></a>
 			<a href="https://radiowavegirl.neocities.org/" target="_blank"><img src="!g/radiowavegirl.png"></a>
 			<a href="https://aegi.neocities.org/" target="_blank"><img src="!g/aegi.gif"></a>
-			<a href="https://gothiclolita.neocities.org/" target="_blank"><img src="!g/gothiclolita.png"></a>
+			<a href="https://gothiclolita.neocities.org/" target="_blank"><img src="!g/gothiclolita.jpg"></a>
 			<a title="i can read this site for hours and hours. so many interesting bits in here" href="https://incessantpain.neocities.org/" target="_blank"><img src="!g/incessantpain.gif"></a>
 			<a title="very cute personal site. seals :3" href="https://sealparty.neocities.org" target="_blank"><img src="!g/sealparty.gif"></a>
 			<a href="https://rachychel.neocities.org/" target="_blank"><img src="!g/rachychel.gif"></a>
@@ -255,6 +255,12 @@
 			<a title="such a cute site with lots of personality" href="https://eggsandmint.neocities.org" target="_blank"><img src="!g/eggsandmint.png" alt="eggsandmint"></a>
 			<a href="https://shrimpfriedeggs.neocities.org/"><img src="https://shrimpfriedeggs.neocities.org/art/mybutton.gif"></a>
 			<a title="velvet blue" href="https://humanityisnotbeautiful.neocities.org"><img src="https://files.catbox.moe/vltthb.png" alt="Velvet Blue"></a>
+			<a title="lexi" href="https://lexiqqq.com/" target="_blank"><img src="https://www.lexiqqq.com/assets/img/button_4.gif" alt="lexi"></a>
+			<a title="nyabla" href="https://nyabla.net" target="_blank"><img src="!g/nyabla.png" alt="nyabla"></a>
+			<a href="https://shydeer.neocities.org" target="_blank"><img src="!g/shydeer.png" alt="shydeer"></a>
+			<a href="https://pameluft.neocities.org" target="_blank"><img src="!g/pameluft.gif" alt="pameluft"></a>
+			<a href="https://decodreams.neocities.org" target="_blank"><img src="!g/decodreams.gif" alt="decodreams"></a>
+			<a href="https://ajiyuu.neocities.org" target="_blank"><img src="!g/ajiyuu.jpeg" alt="ajiyuu"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
@@ -284,10 +290,11 @@
 		<div id="forums" class="neo">
 			<a title="cinni's social site!" href="https://angel-town.cinni.net" target="_blank"><img src="!g/angel-town.gif"></a>
 			<a title="drawing site by cinni.net" href="https://oekaki.cinni.net" target="_blank"><img src="!g/cinnisoekaki.gif"></a>
-			<a title="status cafe - a nicer twitter even" href="https://status.cafe" target="_blank"><img src="https://status.cafe/assets/button.png" alt="Status Cafe" /></a>
+			<a title="status cafe - microblog site" href="https://status.cafe" target="_blank"><img src="https://status.cafe/assets/button.png" alt="Status Cafe" /></a>
 			<a title="melonland.net forum" href="https://forum.melonland.net" target="_blank"><img src="!g/MELONLAND-FORUM.gif"></a>
 			<a title="32.bit cafe" href="https://www.32bit.cafe/" target="_blank"><img src="!g/32bit-cafe.png" alt="32.bit cafe"></a>
-			<a href="https://nekoweb.org/"><img src="https://nekoweb.org/assets/buttons/button4.gif" alt="nekoweb"></a>
+			<a href="https://nekoweb.org/" target="_blank"><img src="https://nekoweb.org/assets/buttons/button4.gif" alt="nekoweb"></a>
+			<a title="silly.city webring" href="https://silly.city" target="_blank"><img src="!g/silly.city.gif" alt="silly city"></a>
 		</div>
 
 		<h4 id="resources">resources / graphics</h4>
