internet stamps update

--- a/website/collection/internet-stamps/index.html
+++ b/website/collection/internet-stamps/index.html
@@ -31,7 +31,7 @@
 		</div>
 
 		<h1>internet graphics</h1>
-		<p><img src="/!g/deco/catlaying.gif"> i fucking love collecting these so much </p>
+		<p><img src="/!g/deco/catlaying.gif"> i fucking love collecting these so much... all of these are just stuff i like.</p>
 		<p>click for credit, i'll try my best to link them back to their sources! some of these are <a href="/notebook/F2U/stamps.html" target="_blank">made by me</a> <img src="/!g/pix/2ofem.gif"></p>
 
 		<h2 id="1" class="title">stamps</h2>
@@ -208,6 +208,7 @@
 			<img src="!g/bookmark.gif">
 			<a href="https://wynns-wonderful-pixel-paradise.neocities.org/buttons"><img src="!g/dontfeedai.gif"></a>
 			<img src="!g/miku.gif">
+			<img src="!g/vocaloid-now.gif" alt="vocaloid now">
 			<img src="!g/cinna.gif">
 			<a herf="https://rainy.gay/other/buttons"><img src="!g/void.png"></a>
 			<img src="!g/bestviewed.gif">
@@ -221,24 +222,25 @@
 			<a href="https://yesterweb.org/no-to-web3/" target="_blank"><img src="!g/yesterweb-saynotoweb3.gif"></a>
 			<img src="!g/fireskull.gif">
 			<img src="!g/portal.jpg">
+			<img src="!g/nagisa.gif">
 			<a href="https://plasticdino.neocities.org/graphics" target="_blank"><img src="!g/loona.gif"></a>
 			<img src="!g/css.png">
 			<img src="!g/neo.jpg">
 			<img src="!g/cherry.gif">
 			<img src="!g/hostedneo.gif">
-			<img src="!g/nagisa.gif">
 			<img src="!g/youcantoo!.gif">
 			<img src="!g/nft.gif">
 			<img src="!g/guestbook.gif">
 			<a href="https://vurren.neocities.org/" target="_blank"><img src="!g/owntwopaws.gif"></a>
 			<a href="https://www.tumblr.com/pileofglass/708541131552669696/made-some-88x31-buttons-for-breakbeat-fans-feel?source=share" target="_blank"><img src="!g/breakbeat.gif"></a>
+			<img src="!g/kriswherearewe.png" alt="deltarune button">
 			<img src="!g/bi.png">
 			<a href="https://monar.neocities.org" target="_blank"><img src="!g/rainbowcat.jpg"></a>
 			<img src="!g/rainbowbutton.gif">
 
 		</div>
 
-		<h2 id="4" class="title">50x50</h2>
+		<h2 id="4" class="title">squares (50x50)</h2>
 		<div id="square" class="container">
 			<img src="/!g/deco/lovekitties.gif">
 			<a href="https://www.deviantart.com/miemie-chan3/gallery" target="_blank"><img src="!g/miemiechan-unicorn.gif"></a>
