silly.city webring

--- a/website/home.html
+++ b/website/home.html
@@ -134,16 +134,9 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>29.mar.24 - site is now part of the <a href="https://silly.city" target="_blank" class="outlink">silly.city</a> webring!</li>
 			<li>25.mar.24 - new <a title="custom domain" href="/journal">journal</a> log!</li>
 			<li>24.mar.24 - added <a title="previously hosted on github pages" href="/projects">web projects</a> + created <a href="/music/listening-log/2024/spring.html">spring listening log</a></li>
-			<li>23.mar.24 - new journal log: <a href="/journal">warmth</a> + updated <a href="/photobook">photobook</a> + featured cat</li>
-			<li>21.mar.24 - updated <a href="/vgs">gaming log</a> with <i>paranormasight</i> and other logs + <a href="/scrapbook/2024#mar">march scrapbook!</a></li>
-			<li>17.mar.24 - big update to <a href="/music/listening-log/2024/winter.html">listening log</a> before winter ends officially!</li>
-			<li>11.mar.24 - <a href="/scrapbook/2024#mar">march</a> scrapbook page created!</li>
-			<li>07.mar.24 - new <a href="/journal">journal log</a>!</li>
-			<li>01.mar.24 - <a href="/journal">journal</a> v3 out!</li>
-			<li>25.feb.24 - added <a href="/scrapbook/2024/index.html#feb">february</a> to 2024 scrapbook</li>
-			<li>24.feb.24 - created <a href="/music/listening-log/2024/winter.html">winter 2024 listening log</a> + new featured song &amp; album</li>
 		</div>
 
 		<div id="featured-cat" class="box">
@@ -196,6 +189,10 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="webrings" class="box">
 			<h2>webrings &amp; widgets</h2>
+			<!--				silly.city-->
+			<iframe src="https://silly.city/embed.html?user=doqmeat" title="silly.city webring" frameborder="no" width="100%" height="60px">
+			</iframe>
+
 			<!--			journalring -->
 			<journal-ring icon="lavender"></journal-ring>
 			<script async src="https://cdn.jsdelivr.net/gh/js044/nenrikido@main/static/js/misc/journalring.js"></script>
@@ -259,7 +256,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		</div>
 
 		<div id="featured-page" class="box">
-			<h2>featured page</h2>
+			<h2>featured page</h2>update
 			<a title="2024 scrapbook... take me there!" href="/scrapbook/2024/index.html"><img src="!g/scrapbook.jpg"></a>
 		</div>
 
