--- a/website/index.html
+++ b/website/index.html
@@ -103,6 +103,11 @@
 
 	<div id="webrings">
 		<h3>webrings</h3>
+		
+		<!--		silly.city-->
+		<iframe src="https://silly.city/embed.html?user=doqmeat" title="silly.city webring" frameborder="no" width="100%" height="60px">
+		</iframe>
+		
 		<!--			journalring -->
 		<journal-ring icon="lavender"></journal-ring>
 		<script async src="https://cdn.jsdelivr.net/gh/js044/nenrikido@main/static/js/misc/journalring.js"></script>
