--- a/website/home.html
+++ b/website/home.html
@@ -83,22 +83,23 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="https://neocities.org/site/doqmeat" target="_blank" class="outlink"><img src="/!g/pix/catheadswing.gif"> neocities
 				profile</a>
 			<a href="https://github.com/doqmeat/doqmeat.com" target="_blank" class="outlink"><img src="/!g/pix/puter.gif"> github repository</a>
-			<a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank" class="outlink"><img src="/!g/pix/mail-sozaiya.gif" alt=""> contact e-mail</a>
+			<a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank" class="outlink"><img src="/!g/pix/mail-sozaiya.gif" alt=""> e-mail</a>
 		</nav>
 
 		<div id="intro" class="box">
 			<img class="intro-img" align="left" style="max-width:100%" alt="">
 			<p>hello! my name is <b class="me">des</b> and this is my humble little corner on the internet. it mostly serves as a digital journal where i share whatever i want, however i want it! coding this site has been the most fun i've had online in a long time. so thank you for checking it out! i hope you find something you like.</p>
 
-			<p>here's my <a class="outlink" href="https://doqmeat.123guestbook.com/">guestbook</a> if you'd like to write a little message <img src="!g/pix/cat-heart.gif"> every single message means a ton to me!</p>
+			<p>here's my <a class="outlink" href="https://doqmeat.123guestbook.com/">guestbook</a> if you'd like to write a little message <img src="!g/pix/cat-heart.gif"> every single message means a ton to me! thank you for visiting me ヾ(￣▽￣)</p>
 
-			<p>this website will probably be an <a title="github issues" href="https://github.com/doqmeat/doqmeat.neocities.org/issues" target="_blank" class="outlink">endless work-in-progress</a> for quite a bit. meaning that i am <b>always</b> working on it and updating it. if anything looks broken, a quick cache clean should help! if not, then feel free to <a href="mailto:doqmeat@gmail.com">e-mail</a> me.</p>
+			<p>this website will probably be an <a title="github issues" href="https://github.com/doqmeat/doqmeat.neocities.org/issues" target="_blank" class="outlink">endless work-in-progress</a> for quite a bit. meaning that i am <b>always</b> working on it and updating it. if anything looks broken, a quick cache clean should help! if not, then feel free to <a href="mailto:doqmeat@gmail.com">e-mail</a> me or create a github issue.</p>
 
 			<center><a href="https://user.xmission.com/~emailbox/catstuff.htm" title="img source!"><img src="/collection/internet-stamps/!g/timecat.png" alt="button that reads 'no time spent with a cat is wasted'" width="30%"></a>
 				<img src="/collection/internet-stamps/!g/borntodie.png" width="40%">
 			</center>
 
 			<h4>notes:</h4>
+			<li>website does not contain any <u>explicit</u> content but it is made with an adult audience in mind.</li>
 			<li>recommended to view on a 1536px+ wide screen <i>but</i> most pages are responsive to your screen size :)</li>
 			<li>some pages use <b>javascript</b> <small>(some pages might not work correctly without it)</small> and <b>iframes</b></li>
 			<li>most pages should be <b>mobile compatible</b> though it might look VERY weird.</li>
@@ -113,9 +114,6 @@ feel free to look around for any help you need :) just don't be THAT person and 
 					<div id="statuscafe-content"></div>
 				</div>
 				<script src="https://status.cafe/current-status.js?name=doqmeat" defer></script>
-
-				<h4>latest piclog:</h4>
-				<a href="https://piclog.blue/profile.php?id=51"><img src="https://piclog.blue/latest.php?id=51" width="50%"></a>
 
 			</div>
 		</div>
@@ -256,8 +254,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		</div>
 
 		<div id="featured-page" class="box">
-			<h2>featured page</h2>update
-			<a title="2024 scrapbook... take me there!" href="/scrapbook/2024/index.html"><img src="!g/scrapbook.jpg"></a>
+			<h2>featured page</h2>
+			<a title="web projects... take me there!" href="/projects"><img src="!g/projects.jpg" alt="featured page"></a>
 		</div>
 
 		<div id="widget" class="box">
