credit page updated

--- a/website/notebook/links/credit.html
+++ b/website/notebook/links/credit.html
@@ -39,11 +39,9 @@
 
 		<p>a lot of stuff i use for my site can be found on my <a href="/notebook/links/index.html">links</a> page! for the fonts i've used you can look at all of them <a href="/notebook/links/fonts.html">here</a> :)</p>
 
-		<p>i usually have a little space in my pages (usually in the <mark>footer</mark>) dedicated to the credit of materials used in the respective page!</p>
+		<p>i usually have a little space in my pages (usually in the <mark>footer</mark>) dedicated to the credit of materials used in the respective page!on older pages, you'll find some credit links in the <mark>source code</mark> :)</p>
 
-		<p>on older pages, you'll find some links in the <mark>source code</mark> :)</p>
-
-		<p>if you still cant find what you're looking for, you're always welcome to ask in my chatbox or e-mail. happy coding!</p>
+		<p>a lot of the graphics in my site are from collection pages that rarely have their stuff sourced. i have tried my best to look for credit on some of these but if <u>i've used something that is not free to use please contact me and i will happily remove it</u>! if you know the credit for something or can't find what you're looking for, you're always welcome to ask in my chatbox or e-mail. happy coding!</p>
 
 		<h2 id="home">homepage v3 credits</h2>
 		<li>most pixels were found from pixel collection pages. i'd love to find the sources for each of them so i can give proper credit so if any one knows, please e-mail me!</li>
@@ -61,8 +59,9 @@
 		<li><a href="/notebook/links/fonts.html">fonts</a> used in this page are: typo garden, gaegu, spirit, morningtea, nintendo ds bios, simple</li>
 		<li>body background by <a href="https://unsplash.com/photos/grass-field-at-daytime-PEm_sLmJT-w" target="_blank">Rodion Kutsaiev</a> from unsplash</li>
 
-		<h3>space.css (wip!)</h3>
+		<h3>space.css</h3>
 		<li>body background by <a href="https://pixelins.tumblr.com/post/100938645642/okay-i-just-really-love-space-here-are-some-tile" target="_blank">pixelins</a></li>
+		<li><a href="fonts.html">fonts</a> used are: natsuzemi, nintendo ds bios</li>
 
 	</div>
 </body>
