added moku.blog link to journal

--- a/website/journal/index.html
+++ b/website/journal/index.html
@@ -36,11 +36,11 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 			<p>a place where i talk about what's going on in my life and about my site!</p>
 			<small class="sticky">all sticky notes are draggable!</small>
 			<details>
-				<summary>journal content notes</summary>
+				<summary>content notes</summary>
 				<p>there is a genuine effort for these to be as coherent as possible, i don't exactly like to ramble in here about whatever, i leave that for my <a href="https://doqmeat.blog.fc2.com" target="iframe_a">FC2 microblog</a> ^_^</p>
 				<p>i don't want to treat this journal as a vent dump, or be overly negative. but i do be having bad times. anything of those topics will have <mark>content warnings</mark> at the start of the entry.</p>
 			</details>
-			<p><a href="credit.html" target="iframe_a">credit</a> / <a title="hosted on FC2, but will pop up in the iframe :)" href="https://doqmeat.blog.fc2.com" target="iframe_a">microblog</a></p>
+			<p><a href="credit.html" target="iframe_a">credit page</a></p>
 			<img class="hide" src="/!g/deco/pencil1.gif" style="max-width:100%">
 			<details open>
 				<summary>2024</summary>
@@ -128,7 +128,11 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 	<aside id="memo4" class="memo draggable">
 		<div class="innermemo">
 			<h3 style="margin:5px;"><img src="/!g/pix/cam-shoot.gif" alt="emoticon"> piclog</h3>
-			<a href="https://piclog.blue/profile.php?id=51"><img src="https://piclog.blue/latest.php?id=51" width="100%" style="border-radius: 10px;" alt="piclog"></a>
+			<a href="https://piclog.blue/profile.php?id=51" target="iframe_a"><img src="https://piclog.blue/latest.php?id=51" width="100%" style="border-radius: 10px;" alt="piclog"></a>
+			<h3><img src="https://doqmeat.com/!g/pix/eat.gif" width="110" alt=""> moku.blog</h3>
+			<p><a href="https://moku.blog/user/doqmeat" target="_blank"> moku.blog profile</a> → i am a big foodie and so i found this site where you log in your food and you can share recipes and pics! hope it gets a little feed in the future i can put here!</p>
+			<h3><img src="https://doqmeat.com/!g/pix/2ofem.gif" width="70" alt=""> FC2 microblog</h3>
+			<p><a title="will pop up in the iframe :)" href="https://doqmeat.blog.fc2.com" target="iframe_a">doqmeat.blog.fc2</a> → sometimes i have stuff to talk about that wouldn't fit on either status.cafe or my journal...</p>
 		</div>
 	</aside>
 
