--- a/website/projects/learning-js/ebook.html
+++ b/website/projects/learning-js/ebook.html
@@ -58,7 +58,12 @@ document.getElementById("cookies").innerHTML = totalCookiesIveEaten;
 
 		<h2>chapter 5: math expressions: familiar operators</h2>
 		<p>i can do math with javascript with these <code>- + * /</code></p>
-		<p class="revisit">i am not sure what a <i>modulus</i> (this thing <code>%</code>) exactly does tbh...</p>
+		<p class="revisit">i am not sure what a <i>modulus</i> (this thing <code>%</code>) exactly does tbh... will search more on this later</p>
+
+		<h2>chapter 6: math expressions: unfamiliar operators</h2>
+		<p><i>31.mar.24</i></p>
+		<p>learning about <code>x++</code> and <code>x--</code>. in action</p>
+		<p>good lord this one was a bit confusing....</p>
 	</main>
 
 	<footer>
